force-app/main/default/objects/Contact/fields/Affiliated_Country__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Country__c</fullName>
    <label>Affiliated Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>