force-app/main/default/objects/Contact/fields/Alumni__c.field-meta.xml
<CustomField>
    <fullName>Alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alumni</label>
    <type>Checkbox</type>
</CustomField>