force-app/main/default/objects/Contact/fields/Contact_Category__c.field-meta.xml
<CustomField>
    <fullName>Contact_Category__c</fullName>
    <label>Contact Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>YSSP</fullName>
            </value>
            <value>
                <fullName>Postdoc</fullName>
            </value>
            <value>
                <fullName>Donors</fullName>
            </value>
            <value>
                <fullName>NMO Committee Member</fullName>
            </value>
            <value>
                <fullName>Current Staff</fullName>
            </value>
            <value>
                <fullName>Collaborators</fullName>
            </value>
            <value>
                <fullName>Friends of IIASA</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>NMO Committee</fullName>
            </value>
            <value>
                <fullName>IIASA Visitor</fullName>
            </value>
            <value>
                <fullName>IIASA Event Attendee</fullName>
            </value>
            <value>
                <fullName>Expressed Interest</fullName>
            </value>
            <value>
                <fullName>Government Official</fullName>
            </value>
            <value>
                <fullName>Alumnus</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Visitor</fullName>
            </value>
            <value>
                <fullName>Travels</fullName>
            </value>
            <value>
                <fullName>MIS MyExpertise</fullName>
            </value>
            <value>
                <fullName>Participant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>