force-app/main/default/objects/Contact/fields/Current_Staff__c.field-meta.xml
<CustomField>
    <fullName>Current_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Staff</label>
    <type>Checkbox</type>
</CustomField>