force-app/main/default/objects/Contact/fields/IIASA_Alumni__c.field-meta.xml
<CustomField>
    <fullName>IIASA_Alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Individuals who have worked at IIASA (either on payroll or for extended visits) or served on IIASA Council.</description>
    <label>IIASA Alumni</label>
    <type>Checkbox</type>
</CustomField>