force-app/main/default/objects/Contact/fields/IIASA_Program__c.field-meta.xml
<CustomField>
    <fullName>IIASA_Program__c</fullName>
    <label>IIASA Program</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Example 1</fullName>
            </value>
            <value>
                <fullName>Example 2</fullName>
            </value>
            <value>
                <fullName>Example 3</fullName>
            </value>
            <value>
                <fullName>Example 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>