force-app/main/default/objects/Contact/fields/IIASA_Programs_update__c.field-meta.xml
<CustomField>
    <fullName>IIASA_Programs_update__c</fullName>
    <label>IIASA Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IIASA_Programs_FZ</valueSetName>
    </valueSet>
</CustomField>