force-app/main/default/objects/Contact/fields/IIASA_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>IIASA_Subscriptions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IIASA Subscriptions</label>
    <type>Checkbox</type>
</CustomField>