force-app/main/default/objects/Contact/fields/IIASA_URL__c.field-meta.xml
<CustomField>
    <fullName>IIASA_URL__c</fullName>
    <label>IIASA URL</label>
    <type>Url</type>
</CustomField>