force-app/main/default/objects/Contact/fields/Maggies_Contact__c.field-meta.xml
<CustomField>
    <fullName>Maggies_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maggies Contact</label>
    <type>Checkbox</type>
</CustomField>