force-app/main/default/objects/Contact/fields/NMO_Committee_Member__c.field-meta.xml
<CustomField>
    <fullName>NMO_Committee_Member__c</fullName>
    <label>NMO Committee Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Former - Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>