force-app/main/default/objects/Contact/fields/NMO_Council_Member_update__c.field-meta.xml
<CustomField>
    <fullName>NMO_Council_Member_update__c</fullName>
    <inlineHelpText>Please specify wether the contact is/was a NMO Council Member and If she/he is/was please specify the years below</inlineHelpText>
    <label>NMO Council Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>