force-app/main/default/objects/Contact/fields/NMO_Council_Member_Years_update__c.field-meta.xml
<CustomField>
    <fullName>NMO_Council_Member_Years_update__c</fullName>
    <inlineHelpText>Please select the years this contact has been NMO Council Member</inlineHelpText>
    <label>NMO Council Member Years</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>NMO_Council_Member_update__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1972</fullName>
            </value>
            <value>
                <fullName>1973</fullName>
            </value>
            <value>
                <fullName>1974</fullName>
            </value>
            <value>
                <fullName>1975</fullName>
            </value>
            <value>
                <fullName>1976</fullName>
            </value>
            <value>
                <fullName>1977</fullName>
            </value>
            <value>
                <fullName>1978</fullName>
            </value>
            <value>
                <fullName>1979</fullName>
            </value>
            <value>
                <fullName>1980</fullName>
            </value>
            <value>
                <fullName>1981</fullName>
            </value>
            <value>
                <fullName>1982</fullName>
            </value>
            <value>
                <fullName>1983</fullName>
            </value>
            <value>
                <fullName>1984</fullName>
            </value>
            <value>
                <fullName>1985</fullName>
            </value>
            <value>
                <fullName>1986</fullName>
            </value>
            <value>
                <fullName>1987</fullName>
            </value>
            <value>
                <fullName>1988</fullName>
            </value>
            <value>
                <fullName>1989</fullName>
            </value>
            <value>
                <fullName>1990</fullName>
            </value>
            <value>
                <fullName>1991</fullName>
            </value>
            <value>
                <fullName>1992</fullName>
            </value>
            <value>
                <fullName>1993</fullName>
            </value>
            <value>
                <fullName>1994</fullName>
            </value>
            <value>
                <fullName>1995</fullName>
            </value>
            <value>
                <fullName>1996</fullName>
            </value>
            <value>
                <fullName>1997</fullName>
            </value>
            <value>
                <fullName>1998</fullName>
            </value>
            <value>
                <fullName>1999</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>2001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>