force-app/main/default/objects/Contact/fields/ORCID__c.field-meta.xml
<CustomField>
    <fullName>ORCID__c</fullName>
    <label>ORCID</label>
    <length>19</length>
    <type>Text</type>
</CustomField>