force-app/main/default/objects/Contact/fields/Permission_to_retain_contact__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_retain_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please mark this box if the contact has given us permission to retain their contact in terms of GDPR regulations.</inlineHelpText>
    <label>Permission to retain contact</label>
    <type>Checkbox</type>
</CustomField>