force-app/main/default/objects/Contact/fields/Personal_Contact_IIASA__c.field-meta.xml
<CustomField>
    <fullName>Personal_Contact_IIASA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Personal Contact IIASA</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>