force-app/main/default/objects/Contact/fields/Positions_at_IIASA__c.field-meta.xml
<CustomField>
    <fullName>Positions_at_IIASA__c</fullName>
    <label>Positions at IIASA</label>
    <type>TextArea</type>
</CustomField>