force-app/main/default/objects/Contact/fields/POSTDOC__c.field-meta.xml
<CustomField>
    <fullName>POSTDOC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POSTDOC</label>
    <type>Checkbox</type>
</CustomField>