force-app/main/default/objects/Contact/fields/Postdoc_Funding_Opportunity_update__c.field-meta.xml
<CustomField>
    <fullName>Postdoc_Funding_Opportunity_update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Postdoc Funding Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contacts (Postdoc Funding Opportunity_FZ)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>