force-app/main/default/objects/Contact/fields/POSTDOC_Year__c.field-meta.xml
<CustomField>
    <fullName>POSTDOC_Year__c</fullName>
    <label>POSTDOC Year</label>
    <type>Date</type>
</CustomField>