force-app/main/default/objects/Contact/fields/POSTDOC_Years_update__c.field-meta.xml
<CustomField>
    <fullName>POSTDOC_Years_update__c</fullName>
    <label>POSTDOC Years</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IIASA_Years_FZ</valueSetName>
    </valueSet>
</CustomField>