force-app/main/default/objects/Contact/fields/Professional_URL__c.field-meta.xml
<CustomField>
    <fullName>Professional_URL__c</fullName>
    <label>Professional URL</label>
    <type>Url</type>
</CustomField>