force-app/main/default/objects/Contact/fields/Research_Interests__c.field-meta.xml
<CustomField>
    <fullName>Research_Interests__c</fullName>
    <label>Research Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Population</fullName>
            </value>
            <value>
                <fullName>Land Use</fullName>
            </value>
            <value>
                <fullName>Water Systems</fullName>
            </value>
            <value>
                <fullName>Biodiversity</fullName>
            </value>
            <value>
                <fullName>Mathematics</fullName>
            </value>
            <value>
                <fullName>Methodologies</fullName>
            </value>
            <value>
                <fullName>Models</fullName>
            </value>
            <value>
                <fullName>Crowd Sourcing</fullName>
            </value>
            <value>
                <fullName>Evolution</fullName>
            </value>
            <value>
                <fullName>Ecology</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Greenhouse Gases</fullName>
            </value>
            <value>
                <fullName>Climate</fullName>
            </value>
            <value>
                <fullName>Arctic Systems</fullName>
            </value>
            <value>
                <fullName>Tropical Systems</fullName>
            </value>
            <value>
                <fullName>Boreal Systems</fullName>
            </value>
            <value>
                <fullName>Forestry</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Aging</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>International Development</fullName>
            </value>
            <value>
                <fullName>Ecosystems</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Science Diplomacy</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Decision Science</fullName>
            </value>
            <value>
                <fullName>Dynamic Systems</fullName>
            </value>
            <value>
                <fullName>Agricultural Systems</fullName>
            </value>
            <value>
                <fullName>Policy Impacts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>