force-app/main/default/objects/Contact/fields/Source_FZ__c.field-meta.xml
<CustomField>
    <fullName>Source_FZ__c</fullName>
    <label>Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IIASA</fullName>
                <default>true</default>
                <label>IIASA</label>
            </value>
            <value>
                <fullName>Friends of IIASA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>