force-app/main/default/objects/Contact/fields/US_Committee_for_IIASA_Member__c.field-meta.xml
<CustomField>
    <fullName>US_Committee_for_IIASA_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Present or past member of the US Committee for IIASA</description>
    <inlineHelpText>Present or past member of the US Committee for IIASA</inlineHelpText>
    <label>US Committee for IIASA Member</label>
    <type>Checkbox</type>
</CustomField>