force-app/main/default/objects/Contact/fields/Years_at_IIASA__c.field-meta.xml
<CustomField>
    <fullName>Years_at_IIASA__c</fullName>
    <label>Years at IIASA</label>
    <type>DateTime</type>
</CustomField>