force-app/main/default/objects/Contact/fields/Years_at_IIASA_update__c.field-meta.xml
<CustomField>
    <fullName>Years_at_IIASA_update__c</fullName>
    <label>Years at IIASA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IIASA_Years_FZ</valueSetName>
    </valueSet>
</CustomField>