force-app/main/default/objects/Contact/fields/YSSP__c.field-meta.xml
<CustomField>
    <fullName>YSSP__c</fullName>
    <label>YSSP</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>SA-YSSP</fullName>
            </value>
            <value>
                <fullName>YSSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>