force-app/main/default/objects/Contact/fields/YSSP_Classbook__c.field-meta.xml
<CustomField>
    <fullName>YSSP_Classbook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YSSP Classbook</label>
    <type>Checkbox</type>
</CustomField>