force-app/main/default/objects/Contact/fields/YSSP_Funding_Opportunity_update__c.field-meta.xml
<CustomField>
    <fullName>YSSP_Funding_Opportunity_update__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>YSSP Funding Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>