force-app/main/default/objects/Contact/fields/YSSP_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>YSSP_Funding_Source__c</fullName>
    <label>YSSP Funding Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD NMO</fullName>
            </value>
            <value>
                <fullName>DDR NMO</fullName>
            </value>
            <value>
                <fullName>IIASA</fullName>
            </value>
            <value>
                <fullName>IIASA Program</fullName>
            </value>
            <value>
                <fullName>Example 1</fullName>
                <isActive>false</isActive>
                <label>Example 1</label>
            </value>
            <value>
                <fullName>Example 2</fullName>
                <isActive>false</isActive>
                <label>Example 2</label>
            </value>
            <value>
                <fullName>Example 3</fullName>
                <isActive>false</isActive>
                <label>Example 3</label>
            </value>
            <value>
                <fullName>Example 4</fullName>
                <isActive>false</isActive>
                <label>Example 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>