force-app/main/default/objects/Contact/fields/YSSP_Home_Institution_update__c.field-meta.xml
<CustomField>
    <fullName>YSSP_Home_Institution_update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>YSSP Home Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (YSSP Home Institution_FZ)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>