force-app/main/default/objects/Contact/fields/YSSP_Program_update__c.field-meta.xml
<CustomField>
    <fullName>YSSP_Program_update__c</fullName>
    <label>YSSP Program</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IIASA_Programs_FZ</valueSetName>
    </valueSet>
</CustomField>