force-app/main/default/objects/Contact/fields/YSSP_Programme_update__c.field-meta.xml
<CustomField>
    <fullName>YSSP_Programme_update__c</fullName>
    <label>YSSP Programme</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IIASA_Programs_FZ</valueSetName>
    </valueSet>
</CustomField>