force-app/main/default/objects/Contact/fields/YSSP_Publication__c.field-meta.xml
<CustomField>
    <fullName>YSSP_Publication__c</fullName>
    <label>YSSP Publication</label>
    <type>Url</type>
</CustomField>