force-app/main/default/objects/Contact/fields/YSSP_Supervisor_update__c.field-meta.xml
<CustomField>
    <fullName>YSSP_Supervisor_update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>YSSP Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (YSSP Supervisor_FZ)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>