force-app/main/default/objects/Contact/fields/YYSP_Home_Institution_update__c.field-meta.xml
<CustomField>
    <fullName>YYSP_Home_Institution_update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>YYSP Home Institution</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts (YYSP Home Institution_FZ)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>