force-app/main/default/objects/Contact/recordTypes/Friends_of_IIASA.recordType-meta.xml
<RecordType>
    <fullName>Friends_of_IIASA</fullName>
    <active>true</active>
    <description>All contacts associated with Friends of IIASA</description>
    <label>Friends of IIASA</label>
</RecordType>