force-app/main/default/objects/Contact/recordTypes/IIASA_Contact.recordType-meta.xml
<RecordType>
    <fullName>IIASA_Contact</fullName>
    <active>true</active>
    <description>All Contact associated with IIASA</description>
    <label>IIASA Contact</label>
</RecordType>